--- a/Mern/Mern/package.json
+++ b/Mern/Mern/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "backend",
+  "name": "client",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js --ignore client",
-    "debug": "node --inspect src/index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite",
     "test": "jest"
-
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
-    "morgan": "^1.10.0",
-    "zod": "^3.20.2"
+    "axios": "^1.2.0",
+    "bootswatch": "^5.2.2",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "vite": "^3.2.3",
+    "jest": "^29.0.0",
+    "babel-jest": "^29.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
   }
 }
